--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -9,7 +9,16 @@ sql:
         package: "repository"
         out: "internal/generated/repository"
         sql_package: "pgx/v5"
+        emit_json_tags: true
+        emit_prepared_queries: false
+        emit_interface: false
+        emit_exact_table_names: false
         overrides:
           - db_type: "uuid"
             go_type: "github.com/google/uuid.UUID"
+          - db_type: "timestamptz"
+            go_type:
+              import: "time"
+              type: "Time"
+
 
