--- a/.env
+++ b/.env
@@ -6,3 +6,13 @@ GOOSE_DRIVER=postgres
 GOOSE_DBSTRING=postgres://postgres:root@localhost:5432/serverio_duomenubaze?sslmode=disable
 GOOSE_MIGRATION_DIR=./migrations
 GOOSE_TABLE=public.goose_migrations
+
+ENVIRONMENT=development
+LOG_LEVEL=debug
+# Battle.net OAuth
+BATTLE_CLIENT_ID=6a68d049019c4acdbc6088d4fe04cedf
+BATTLE_CLIENT_SECRET=s721sRLtEo7eHNWKGXzWmM5icjXq8z7D
+
+BATTLE_NET_REGION=eu
+# JWT
+JWT_SECRET=slaptas_raktas
